<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity"
    android:layout_centerHorizontal="true"
    android:background="@drawable/bg_loginregist"
    android:paddingTop="60dp">

    <LinearLayout
        android:id="@+id/ll_wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_login"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/tv_hey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_login"
            android:textSize="15sp"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/login_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:textColor="@color/button"
                android:layout_marginRight="20dp"/>

            <View
                android:layout_width="45dp"
                android:layout_height="3dp"
                android:background="@color/button"
                android:layout_below="@+id/login_fragment"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/sign_up_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/login_fragment"
                android:layout_marginBottom="25dp"
                android:layout_marginLeft="30dp"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            />

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            android:drawableRight="@drawable/ic_email_black_24dp"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            android:drawableRight="@drawable/ic_visibility_off_black_24dp"/>

        <EditText
            android:id="@+id/et_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="text"
            android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="15sp"
            android:textColor="@color/light_blue"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_terms"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_radius"
            android:ems="10"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/button"
        android:layout_alignParentBottom="true"
        android:text="@string/by_signing_up"
        android:textColor="@color/white"
        android:padding="10dp"
        android:gravity="center"
        />

</RelativeLayout>