<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/institution"
            android:textSize="20sp"
            android:fontFamily="@font/source_sans_pro_semibold"
            />

        <EditText
            android:id="@+id/et_institution_edit_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/institution"
            android:ems="15"
            android:textSize="20sp"
            android:inputType="text"
            android:fontFamily="@font/product_sans_regular"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/academic_degree"
            android:textSize="20sp"
            android:fontFamily="@font/source_sans_pro_semibold"
            />

        <EditText
            android:id="@+id/et_academic_degree_edit_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/academic_degree"
            android:ems="15"
            android:textSize="20sp"
            android:inputType="text"
            android:fontFamily="@font/product_sans_regular"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/study_area"
            android:textSize="20sp"
            android:fontFamily="@font/source_sans_pro_semibold"
            />

        <EditText
            android:id="@+id/et_study_area_edit_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/study_area"
            android:ems="15"
            android:textSize="20sp"
            android:inputType="text"
            android:fontFamily="@font/product_sans_regular"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:fontFamily="@font/source_sans_pro_semibold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:fontFamily="@font/source_sans_pro_semibold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="@string/until_now"
                android:textSize="20sp"
                android:fontFamily="@font/source_sans_pro_semibold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_start_education"
                android:layout_width="120dp"
                android:layout_height="43dp"
                style="@style/Widget.AppCompat.Spinner.Underlined" />

            <Spinner
                android:id="@+id/spinner_end_education"
                android:layout_width="120dp"
                android:layout_height="43dp"
                android:layout_marginLeft="20dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                 />

            <CheckBox
                android:id="@+id/cb_until_now_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:buttonTint="@color/dark_blue" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="20sp"
            android:gravity="start"
            android:fontFamily="@font/source_sans_pro_semibold"
            />

        <EditText
            android:id="@+id/et_description_edit_education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:ems="15"
            android:textSize="20sp"
            android:inputType="text"
            android:fontFamily="@font/product_sans_regular"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/delete_this_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/delete_this_education"
        android:textSize="15sp"
        android:drawableLeft="@drawable/delete"
        android:drawablePadding="10dp"
        android:fontFamily="@font/source_sans_pro_semibold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue_border"
        />

    <Button
        android:id="@+id/bnt_add_new_education"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/delete_button_radius"
        android:text="@string/add_new_education"
        android:textColor="@color/white"
        />

</LinearLayout>